--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "0.24.0",
+    "idx": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-permissions": "^3.9.3",
     "react-native-reanimated": "3.5.4",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-snackbar": "^2.4.0",
+    "react-redux": "7.2.6",
+    "redux": "4.1.2",
+    "redux-actions": "2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "6.0.0",
+    "redux-persist-filesystem-storage": "^4.1.0",
+    "redux-saga": "1.1.3",
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
